--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -104,7 +104,7 @@ p {color: #333}
 .welcome_text {color: #ffffff; font-size: 32px; padding-bottom: 40px; margin-bottom: 0; text-align:center; font-weight: normal; font-family:Georgia, "Times New Roman", Times, serif; font-style:italic}
 .excerpt {font-size: 24px; margin-bottom: 0; font-weight: normal; font-family:Georgia, "Times New Roman", Times, serif; font-style:italic}
 
-h1,h2,h3,h4 {font-family:'Open Sans Condensed',sans-serif; font-weight: normal; color: #333;}
+h1,h2,h3,h4,h5 {font-family:'Open Sans Condensed',sans-serif; font-weight: normal; color: #333;}
 
 /* sections */
 .section_light {background: #FFF; border-top: 1px dotted #999; border-bottom: 1px dotted #999; padding: 20px 0; clear:both}
