--- a/css/main.css
+++ b/css/main.css
@@ -48,6 +48,17 @@ footer h3 {color: #888d92}
 .about-cards .panel {height: 200px;}
 .about-cards .panel .row {margin-bottom: 20px;}
 
+/*board page*/
+.section_execs {padding: 50px 0;}
+.section_execs h1 {font-size:6em; padding-bottom: 60px; text-align: center;}
+.singlesclub .left {border-right: 0px;}
+.singlesclub .center {border-left: 0px; border-right: 0px;}
+.singlesclub .right {border-left: 0px;}
+.section_plebs {margin-bottom: 50px}
+.section_plebs h1 {font-size:6em; padding: 0 0 60px; margin: 0px; text-align: center;}
+.section_execs .panel, .section_plebs .panel {height: 490px;}
+#exec_pres .panel {height: 533px;}
+
 /*events page*/
 .section_events .row {padding-bottom:60px}
 .section_events .panel {background-color: #F06B48; border:0px}
