--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@ body {background: #fafafa;}
 h1,h2,h3,h4,h5 {font-family:'Open Sans Condensed',sans-serif; font-weight: normal; color: #333;}
 p {color: #333}
 header {background: url('img/s1.jpg') fixed no-repeat left top; background-size:cover; padding: 20px 0 40px;}
-footer {font-size: .8em; padding: 30px 0px 30px; color: #b2b5b9; background-color: #262626;}
+footer {font-size: .8em; padding: 30px 0px 30px; color: #b2b5b9; background-image: url('../img/patterns/escheresque_ste/escheresque_ste.png');}
 footer h3 {color: #888d92}
 
 /*sets width for all row elements (built into foundation)*/
@@ -34,9 +34,9 @@ footer h3 {color: #888d92}
 #flagset {float: right;}
 
 /* sections */
-.section_light {background: #FFF; border-top: 1px dotted #999; border-bottom: 1px dotted #999; padding: 20px 0; clear:both}
+.section_light {background: #FFF; border-top: 1px dotted #999; padding: 20px 0; clear:both}
 .section_light h1 {text-align: center; border-bottom: 1px dotted #999; padding-bottom: 20px; margin: 0 0 20px 0}
-.section_main {padding: 50px 0; margin-bottom: 50px}
+.section_main {padding: 50px 0 100px; background-image: url('../img/patterns/agsquare/agsquare_@2X.png');}
 .section_main h1 {font-size:6em; padding: 0 0 50px}
 .section_events {padding: 50px 0; padding-top:120px; padding-bottom: 0px; background-color: #262626;}
 .section_events h1 {font-size:6em; padding: 0 0 50px}
@@ -51,17 +51,16 @@ footer h3 {color: #888d92}
 .about-cards .panel .row {margin-bottom: 20px;}
 
 /*board page*/
-.section_execs {padding: 50px 0;}
+.section_execs {padding: 50px 0; background-image: url('../img/patterns/agsquare/agsquare_@2X.png');}
 .section_execs h1 {font-size:6em; padding-bottom: 60px; text-align: center;}
 .singlesclub .left {border-right: 0px;}
 .singlesclub .center {border-left: 0px; border-right: 0px;}
 .singlesclub .right {border-left: 0px;}
-.section_plebs {margin-bottom: 50px}
-.section_plebs h1 {font-size:6em; padding: 0 0 60px; margin: 0px; text-align: center;}
-.section_execs .panel, .section_plebs .panel {height: 490px;}
+.section_execs .panel {height: 490px;}
 #exec_pres .panel {height: 533px;}
 
 /*events page*/
+.section_events {background-image: url('../img/patterns/escheresque_ste/escheresque_ste.png');}
 .section_events .row {padding-bottom:60px}
 .section_events .panel {background-color: #F06B48; border:0px}
 .section_events h1, .section_events h3 {color:#ffffff}
@@ -71,6 +70,8 @@ footer h3 {color: #888d92}
  box-shadow:         inset 0 0 20px #000000;
 }
 .shadow2{box-shadow: 0 0 30px #262626;}
+.section_annual_events {background-image: url('../img/patterns/agsquare/agsquare_@2X.png'); padding: 20px 0; clear:both}
+.section_annual_events h1 {text-align: center; padding-bottom: 20px; margin: 0 0 20px 0}
 #annual-events h1 {font-size: 6em; text-align:center;}
 #annual-events h3 {font-size: 50px;}
 #annual-events p {font-size: 17px;}
