fixed fixed header

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 body {background: #fafafa;}
 h1,h2,h3,h4,h5 {font-family:'Open Sans Condensed',sans-serif; font-weight: normal; color: #333;}
 p {color: #333}
-header {background: url('img/s1.jpg') fixed no-repeat left top; background-size:cover; padding: 20px 0 40px;}
+header {background: fixed no-repeat left top; background-size:cover; padding: 20px 0 40px;}
 footer {font-size: .8em; padding: 30px 0px 30px; color: #b2b5b9; background-image: url('../img/patterns/escheresque_ste/escheresque_ste.png');}
 footer h3 {color: #888d92}
 
