--- a/css/main.css
+++ b/css/main.css
@@ -179,6 +179,13 @@ footer li {list-style-type: none;}
 #contactyt {width:450px; height: 325px; padding-top:30px;}
 #contactmap {width: 450px; height: 450px; padding-top:20px;}
 #cmaps {margin-top:50px;}
+#cmaps img:hover {opacity: .5;
+		-webkit-transition: all .2s ease-in-out;
+        -moz-transition: all .2s ease-in-out;
+        -ms-transition: all .2s ease-in-out;
+        -o-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out;
+}
 
 /*easter egg page*/
 .section_ee {padding: 30px; background-image: url('../img/patterns/agsquare/agsquare_@2X.png');}
@@ -188,6 +195,30 @@ footer li {list-style-type: none;}
 /*other*/
 .button {background-color: #F06B48; border: 0px; font-family: 'Open Sans Condensed', Helvetica, sans-serif; font-weight: 300; font-size: 25px; height: 50px;}
 .button:hover {background-color: #C0563A;}
+
+/*modal*/
+#lean_overlay {
+    position: fixed;
+    z-index:100;
+    top: 0px;
+    left: 0px;
+    height:100%;
+    width:100%;
+    background: #000;
+    display: none;
+}
+#modal {
+  position: fixed;
+  width: 600px;
+  padding: 30px;
+  display:none;
+  background: #FFF;
+  border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
+  box-shadow: 0px 0px 4px rgba(0,0,0,0.7); -webkit-box-shadow: 0 0 4px rgba(0,0,0,0.7); -moz-box-shadow: 0 0px 4px rgba(0,0,0,0.7);
+}
+#modal h2 {padding-bottom: 10px;}
+#modal p {font-family: 'Open Sans Condensed'; font-size: 1.5em; color: #666; text-shadow: none;}
+.filler {display: none;}
 
 /*mobile*/
 @media only screen and (max-width: 40em){
