--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,8 @@ h1,h2,h3,h4,h5 {font-family:'Open Sans Condensed', Helvetica, sans-serif; font-w
 p {color: #333}
 header {background: fixed no-repeat left top; background-size:cover; padding: 20px 0 40px;}
 footer {font-size: .8em; padding: 30px 0px 30px; color: #b2b5b9; background-image: url('../img/patterns/escheresque_ste/escheresque_ste.png');}
-footer h3 {color: #888d92}
+footer h3 {color: #abafb2}
 footer li {list-style-type: none;}
-@media only screen and (max-width: 40em){
-	footer > div {padding: 0 20px;}
-}
 
 /*sets width for all row elements (built into foundation)*/
 .row {width: 1100px;}
@@ -26,6 +23,7 @@ footer li {list-style-type: none;}
 	#title {display: none;}
 	.contact-info-mobile {display: none;}
 	.section_about_mobile {display: none;}
+	.cmb {display: none;}
 }
 .header_nav {background: #fafafa; box-shadow: 0 1px 6px rgba(34, 25, 25, 0.6); z-index: 999;}
 
@@ -222,7 +220,7 @@ footer li {list-style-type: none;}
 	.section_fs h3 {font-size: 1.5em}
 	.section_fs h4 {font-size: 1.5em}
 
-	.section_contact {padding: 20px 0; border-top: solid 2px #eeeeee;}
+	.section_contact {padding: 0 0 20px; border-top: solid 2px #eeeeee;}
 	.contact-info {display: none;}
 	.contact-info-mobile {padding: 5px 0 5px 20px;}
 	.contact-info-mobile img {width: 48px; height: 48px;}
@@ -233,10 +231,14 @@ footer li {list-style-type: none;}
 	#contactmap {width: auto; height: auto; padding-top:5px;}
 	#cmaps {margin-top: 5px;}
 	#contactus {font-size: 4em; text-align: center;}
+	.cmb {padding-bottom: 20px; height: 10px; border-bottom: solid 2px #aaaaaa;}
 
 	.section_ee {padding: 8px}
 	#congrats h1 {font-size: 4em;}
 
-	#submit-button {width: auto;}
+	#mce-EMAIL {width: 250px;}
+	#submit-button {width:250px;}
 	header {background: no-repeat left top; background-size: cover; padding: 20px 0 40px;}
+	footer > div {padding: 0 10px;}
+	footer {font-size: .8em; padding: 10px 0px 10px; color: #b2b5b9; background-image: url('../img/patterns/escheresque_ste/escheresque_ste.png');}
 }
